# fnal-toyExperiment

./: CMakeLists.txt  altCMakeLists.cmake
admin/: CMakeLists.txt  check_inputFiles_symlink  check_outputDir
scripts/: browse
toyExperiment/: CMakeLists.txt
toyExperiment/Analyzers/: CMakeLists.txt  EventDisplay_module.cc  HelloWorld_module.cc  InspectFittedHelix_module.cc  InspectGenParticles_module.cc  InspectIntersections_module.cc  InspectTrkHits_module.cc  MassPlot_module.cc  PlotOrientation.cc  altCMakeLists.cmake
toyExperiment/Conditions/: CMakeLists.txt  Conditions.h  Conditions_service.cc  PDT.cc  PDT.h  ParticleInfo.cc  altCMakeLists.cmake
toyExperiment/DataProducts/: CMakeLists.txt  altCMakeLists.cmake  classes.h  classes_def.xml
toyExperiment/Geometry/: CMakeLists.txt  Geometry.h  Geometry_service.cc  LuminousRegion.cc  LuminousRegion.h  Shell.cc  Shell.h  altCMakeLists.cmake
toyExperiment/HelloWorldScripts/: CMakeLists.txt  bug01.fcl  bug02.fcl  bug03.fcl  bug04.fcl  compareMassPlots.cint  eventDisplay.fcl  hello.fcl  hello1.fcl  hello2.fcl  hello3.fcl  hello4.cint  hello4.fcl  histograms.fcl  makeLinks  makeLinks.sh  plotHistograms.cint  setup.sh  skipEvents.fcl  writeFile.fcl
toyExperiment/MCDataProducts/: CMakeLists.txt  GenParticle.cc  GenParticle.h  Intersection.cc  Intersection.h  MCRunSummary.cc  MCRunSummary.h  TrkHitMatch.h  altCMakeLists.cmake  classes.h  classes_def.xml
toyExperiment/PDT/: CMakeLists.txt  PDT.h  PDT_service.cc  ParticleInfo.cc  ParticleInfo.h  altCMakeLists.cmake
toyExperiment/RecoDataProducts/: CMakeLists.txt  DetectorStatus.cc  DetectorStatus.h  DetectorStatusRecord.cc  DetectorStatusRecord.h  FittedHelixData.cc  FittedHelixData.h  Helix.cc  Helix.h  RecoTrk.cc  RecoTrk.h  TrkHit.cc  TrkHit.h  altCMakeLists.cmake  classes.h
toyExperiment/Reconstruction/: CMakeLists.txt  FindAndFitHelix_module.cc  FittedHelix.cc  FittedHelix.h  altCMakeLists.cmake
toyExperiment/Simulations/: CMakeLists.txt  DetectorSimulation_module.cc  EventGenerator_module.cc  HitMaker_module.cc  altCMakeLists.cmake
toyExperiment/Utilities/: CMakeLists.txt  ParameterSetFromFile.cc  ParameterSetFromFile.h  RandomUnitSphere.cc  altCMakeLists.cmake  eventIDToString.cc  inputTagsFromStrings.h
toyExperiment/databaseFiles/: CMakeLists.txt  geom01.fcl
toyExperiment/fcl/: assnsTest.fcl  dev01.fcl  drawEvents.fcl  drawGenTracks.fcl  drawTracker.fcl  dump.fcl  eventDisplay01.fcl  messageService.fcl  printGeom.fcl  read01.fcl  standardMessageDestinations.fcl  standardModules.fcl  trackdebug01.fcl
toyExperiment/inputFiles/: CMakeLists.txt  input01.art  input01.fcl  input01_data.root  input02.art  input02.fcl  input02_data.root  input03.art  input03.fcl  input03_data.root  input04.art  input04.fcl  input04_data.root
ups/: product_deps  setup_for_development
